--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -15,6 +15,10 @@
       <td class="green">Condition:</td><td> {{ object.get_condition_display }}</td>
     </tr>
     <tr>
+      <td class="green">Author:</td><td> {{ object.author }}</td>
+      <td class="green">Publisher:</td><td> {{ object.publisher }}</td>
+    </tr>
+    <tr>
       <td class="green">Location:</td><td> {{ object.location }}, {{ object.get_district_display }}</td>
       <td class="green">Price:</td><td>BZ$ {{ object.price }}</td>
     </tr>
