Fix IE8 alignment issues ..
* static/css/layout.css
  remove overflow property from wrapper class

* templates/base.html
  remove rounded corners from advanced search, for modal to work properly in ie8

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,35 +131,35 @@
 <table cellpadding="4" cellspacing="4">
 <tr>
 <td>Title</td>
-<td><input type="text" name="a_title" id="a_title" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_title" id="a_title" value="" /></td>
 </tr>
 <tr>
 <td>Author</td>
-<td><input type="text" name="a_author" id="a_author" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_author" id="a_author" value="" /></td>
 </tr>
 <tr>
 <td>Publisher</td>
-<td><input type="text" name="a_publisher" id="a_publisher" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_publisher" id="a_publisher" value="" /></td>
 </tr>
 <tr>
 <td>School</td>
-<td><input type="text" name="a_school" id="a_school" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_school" id="a_school" value="" /></td>
 </tr>
 <tr>
 <td>Subject</td>
-<td><input type="text" name="a_subject" id="a_subject" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_subject" id="a_subject" value="" /></td>
 </tr>
 <tr>
 <td>Revision</td>
-<td><input type="text" name="a_revision" id="a_revision" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_revision" id="a_revision" value="" /></td>
 </tr>
 <tr>
 <td>Edition</td>
-<td><input type="text" name="a_edition" id="a_edition" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_edition" id="a_edition" value="" /></td>
 </tr>
 <tr>
 <td>ISBN #</td>
-<td><input type="text" name="a_isbn" id="a_isbn" class="rounded-corners" value="" /></td>
+<td><input type="text" name="a_isbn" id="a_isbn" value="" /></td>
 </tr>
 <tr>
 <td colspan="2" align="right"><button type="submit" value="Search" ><img src="/static/design_art/search_btn.png" id="advanced_search_button" /></button></td></tr>   
