--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
   <div id="menu_cont">
     <div id="menu">
     {% block menu %}
-      <span>Today is: {{ date|date:"F dS Y" }}</span>
+      <span>Today is: {{ date|date:"F dS, Y" }}</span>
     {% endblock %}  
     </div>
     <div id="menu_rt"></div>
