--- a/templates/sellers/books.html
+++ b/templates/sellers/books.html
@@ -4,10 +4,11 @@
 <script type="text/javascript" src="/static/js/datatables/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-	oTable = $('#books').dataTable({
+    oTable = $('#books').dataTable({
 		"bJQueryUI": true,
 		"sPaginationType": "full_numbers"
-	});
+    });
+    oTable.fnSort([[2,'asc']]);
 } );
 </script>
 <style type="text/css" title="currentStyle"> 
@@ -28,8 +29,9 @@ sold.
 </div>
 </div>
 <br />
-<table id="books" width="100%" style="color: green;">
+<table id="books" width="100%" height="100%" style="color: green;">
 <thead>
+<tr>
 <th>Id</th>
 <th>thumbnail</th>
 <th>Title</th>
@@ -38,6 +40,7 @@ sold.
 <th>Price</th>
 <th>Views</th>
 <th>Actions</th>
+</tr>
 </thead>
 <tbody>
 {% for book in books %}
@@ -51,6 +54,7 @@ sold.
 <td style="text-align: center">{{ book.views }}</td>
 <td style="text-align: center"><a href="/books/edit/{{ book.id }}">Edit</a> | 
 <a href="/books/delete/{{ book.id }}">Delete</a></td>
+</tr>
 {% endfor %}
 </tbody>
 </table>
