fix the clean_new_image form, check if there is an image then actually save.  a couple template changes as well

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
     <table width="98%" style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
     <tr>
       <td><a href="/pages/terms/">Terms of Use</a> ||  <a href="/pages/your-safety/">Your Safety</a> || <a href="/pages/avoid-scams/">Avoid Scams</a>
-      || <a href="/pages/about/">About Us</a> || <a href="/pages/disclaimer/">Legal</a></td>
+      || <a href="/pages/about/">About Us</a> </td>
       <td align="right" style="text-align: right;">Copyright &copy; 2011 miBookList.com || <a href="mailto: info@mibooklist.com">info@miBookList.com</a></td>
       </tr>
     </table>
