--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -78,7 +78,7 @@
     </table>
 </div>
 {% endfor %}
-<div id="bottom_search" style="margin-top: 20px; float: right;">
+<div id="bottom_search" style="margin-top: 20px; margin-bottom: 10px;">
   <form action="/search/" id="search_form2" method="POST">
     {% csrf_token %}
     <table>
