--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}You have been logout.{% endblock %}
+{% block title %}You have been logged out.{% endblock %}
 {% block menu %}{% endblock %}
 {% block content %}
 <h1>Thanks for spending time on the site today.</h1>
