Add styling for lists

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -54,6 +54,16 @@ form ul li label {
   font-weight: bold;
   width: 200px;
 }
+ul {
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+ul li{
+ margin: 3px;
+ font-size: 12px;
+}
+
 #wrapper {
   width: 900px;	  
   background-image: url(../design_art/content_bg.png);  
